sort.pancake.lessons.sort.pancake.BasicPancake.scala.error
BasicPancake:8: error: '=' expected but ';' found.
			var rangGrosseCrepe=-1;
                                              ^